# pytorch-ddp-example

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-push.yaml
deploy/docker/: Dockerfile  README.md  install.sh
deploy/image/: Dockerfile
deploy/kubernetes/: README.md  pytorch_job.yaml
deploy/standalone/: README.md  run_docker.sh  run_shell.sh
src/pytorch_ddp_example/: __main__.py  main.py
