[project]
name = "pytorch-ddp-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "linuzb", email = "levizebulon@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
